fix(android): Fix android flickering/seperation

--- a/src/transition.css
+++ b/src/transition.css
@@ -2,52 +2,49 @@
 
 /* Page class for all mobile pages */
 .mb-page {
+  -webkit-backface-visibility: hidden;
   position: absolute;
   width: 100%;
   height: 100%;
-  -webkit-backface-visibility: hidden;
-}
-/* When going back, will apply reverse class */
-.mb-reverse {
-  -webkit-animation-direction: reverse;
 }
 
 /* 
  * Slide
  * slide pages horizontally
  */
-@-webkit-keyframes slideFromRight {
-  0% {
-    -webkit-transform: translate3d(100%, 0, 0);
-  }
-  100% {
-    -webkit-transform: translate3d(0, 0, 0);
-  }
+@-webkit-keyframes slideInFromRight {
+  0% { -webkit-transform: translate3d(100%, 0, 0); }
+  100% { -webkit-transform: translate3d(0, 0, 0); }
 }
-@-webkit-keyframes slideToLeft {
-  0% {
-    -webkit-transform: translate3d(0,0,0);
-  }
-  100% {
-    -webkit-transform: translate3d(-100%, 0, 0);
-  }
+@-webkit-keyframes slideOutToRight {
+  0% { -webkit-transform: translate3d(0, 0, 0); }
+  100% { -webkit-transform: translate3d(100%, 0, 0); }
+}
+@-webkit-keyframes slideInFromLeft {
+  0% { -webkit-transform: translate3d(-100%,0,0); }
+  100% { -webkit-transform: translate3d(0, 0, 0); }
+}
+@-webkit-keyframes slideOutToLeft {
+  0% { -webkit-transform: translate3d(0,0,0); }
+  100% { -webkit-transform: translate3d(-100%, 0, 0); }
 }
 .mb-slide {
   -webkit-animation-duration: 0.3s;
+  -webkit-animation-timing-function: ease;
 }
 .mb-slide.mb-in {
-  -webkit-animation-name: slideFromRight;
-  -webkit-transform: translate3d(0,0,0);
+  -webkit-animation-name: slideInFromRight;
 }
 .mb-slide.mb-in.mb-reverse {
+  -webkit-animation-name: slideOutToRight;
   -webkit-transform: translate3d(100%,0,0);
 }
 .mb-slide.mb-out {
-  -webkit-animation-name: slideToLeft;
-  -webkit-transform: translate3d(-100%,0,0);
+  -webkit-animation-name: slideOutToLeft;
+  -webkit-transform: translate3d(-100%, 0, 0);
 }
 .mb-slide.mb-out.mb-reverse {
-  -webkit-transform: translate3d(0,0,0);
+  -webkit-animation-name: slideInFromLeft;
 }
 
 
@@ -55,23 +52,26 @@
  * Modal!
  * slide a page in from the bottom onto a page
  */
-@-webkit-keyframes modal {
-  0% {
-    -webkit-transform: translate3d(0, 100%, 0);
-  }
-  100% {
-    -webkit-transform: translate3d(0, 0, 0);
-  }
+@-webkit-keyframes modalUp {
+  0% { -webkit-transform: translate3d(0, 100%, 0); }
+  100% { -webkit-transform: translate3d(0, 0, 0); }
+}
+@-webkit-keyframes modalDown {
+  0% { -webkit-transform: translate3d(0, 0, 0); }
+  100% { -webkit-transform: translate3d(0, 100%, 0); }
 }
 .mb-modal {
   z-index: 10;
-  -webkit-animation: modal 0.4s;
-  -webkit-transform: translate3d(0,0,0);
+  -webkit-animation-duration: 0.4s;
 }
-.mb-modal.mb-reverse,
+.mb-modal.mb-in,
+.mb-modal.mb-out.mb-reverse {
+  -webkit-animation-name: modalUp;
+}
+.mb-modal.mb-in.mb-reverse,
 .mb-modal.mb-out {
-  -webkit-transform: translate3d(0,100%,0);
-  -webkit-animation-direction: reverse;
+  z-index: 9; /* Lower than modal-in */
+  -webkit-animation-name: modalDown;
+  -webkit-transform: translate3d(0, 100%, 0);
 }
-
 
